--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -52,7 +52,7 @@
 }
 
 body {
-  font-family: "Arial", sans-serif;
+  font-family: "Arial";
   background-color: var(--background-color);
   color: var(--text-color);
 }
