--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -4,10 +4,10 @@
   --text-color: #e4e6eb;
   --line-color: #42434a;
   --hover-color: #2c2f3380;
-  --secondary-color: #5c5fbb;
+  --secondary-color: #849cff;
   --error-color: #dc2626;
   --success-color: #22c55e;
-  --secondary-light: #7275d6;
+  --secondary-light: #262a3f;
   --secondary-rgb: 92, 95, 187;
   --radius-full: 9999px;
   /* Spacing */
