--- a/frontend/src/styles/components/Sidebar.css
+++ b/frontend/src/styles/components/Sidebar.css
@@ -157,6 +157,10 @@
 
 /* Media queries for responsiveness */
 @media (min-width: 992px) {
+  .app-container {
+    padding-left: 250px;
+  }
+
   .app-container.sidebar-folded {
     padding-left: 60px;
   }
