--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -7,7 +7,7 @@
   --secondary-color: #849cff;
   --error-color: #dc2626;
   --success-color: #22c55e;
-  --secondary-light: #2c2f3380;
+  --secondary-light: #241e29;
   --secondary-rgb: 92, 95, 187;
   --radius-full: 9999px;
   /* Spacing */
