--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -3,11 +3,11 @@
   --background-color: #151618;
   --text-color: #e4e6eb;
   --line-color: #42434a;
-  --hover-color: #2c2f3380;
+  --hover-color:#241e29 ;
   --secondary-color: #849cff;
   --error-color: #dc2626;
   --success-color: #22c55e;
-  --secondary-light: #241e29;
+  --secondary-light: #2c2f3380;
   --secondary-rgb: 92, 95, 187;
   --radius-full: 9999px;
   /* Spacing */
