--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -4,6 +4,7 @@
   --text-color: #ffffff;
   --line-color: #42434a;
   --hover-color: #241e29;
+  --hover-color-secondary: #ffffff1a;
   --secondary-color: #849cff;
   --error-color: #dc2626;
   --success-color: #22c55e;
