--- a/frontend/src/styles/pages/Profile.css
+++ b/frontend/src/styles/pages/Profile.css
@@ -551,8 +551,8 @@
 
 @media (max-width: 576px) {
   .profile-image {
-    width: 80px;
-    height: 80px;
+    width: 100%;
+    height: auto;
   }
 
   .profile-info h2 {
